# python-project-template

./: .gitignore  README.md  pyproject.toml  requirements-dev.txt  requirements.txt
src/: __init__.py  main.py
